--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.35",
     "sass": "^1.70.0",
-    "vite": "^5.1.0"
+    "sharp": "^0.33.2",
+    "svgo": "^3.2.0",
+    "vite": "^5.1.0",
+    "vite-plugin-image-optimizer": "^1.1.7"
   }
 }
